--- a/html/main.html
+++ b/html/main.html
@@ -44,6 +44,7 @@
   		 <ul class="nav nav-tabs nav-justified">
     		 <li class="active"><a href="#">Inicio</a></li>
 		     <li><a href="Empresa.html">Empresa</a></li>
+        	 <li><a href="Linea.html">Linea</a></li>
 		     <li><a href="Usuario.html">Usuario</a></li>
 		     <li><a href="index.html">Salir</a></li> <!-- no elimina sessions, por favor revisar -->
 	  	 </ul>
