--- a/html/Linea.html
+++ b/html/Linea.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -29,37 +26,37 @@
       <div class="row">
         <div class="col-md-4">
           <img src="imagenes/logo.gif">
-      	</div>
-      	<div class="col-md-4">
-      		<h1>Sofyinventarios<br> 
-      		<small> v. Beta </small>
-      		</h1>
-      	</div>
-      </div>	
+        </div>
+        <div class="col-md-4">
+            <h1>Sofyinventarios<br> 
+            <small> v. Beta </small>
+            </h1>
+        </div>
+      </div>    
     </div>
 
       
     <!-- menu superior -->
      <div class="container" style="padding-top: 1em;">
-  		 <ul class="nav nav-tabs nav-justified">
-    		 <li><a href="main.html">Inicio</a></li>
-		     <li class="active"><a href="Empresa.html">Empresa</a></li>
-         <li><a href="Linea.html">Linea</a></li>
-		     <li><a href="Usuario.html">Usuario</a></li>
-		     <li><a href="index.html">Salir</a></li> <!-- no elimina sessions, por favor revisar -->
-	  	 </ul>
-	   </div> 
+         <ul class="nav nav-tabs nav-justified">
+             <li><a href="#">Inicio</a></li>
+             <li><a href="Empresa.html">Empresa</a></li>
+             <li class="active"><a href="Linea.html">Linea</a></li>
+             <li><a href="Usuario.html">Usuario</a></li>
+             <li><a href="index.html">Salir</a></li> <!-- no elimina sessions, por favor revisar -->
+         </ul>
+       </div> 
     <p>
     <div class="container">
-		<div class="row">
-			<div class="col-md-2">
-				<ul class="nav nav-pills nav-stacked">
-					<li><a href="formularioEmpresa.html">Registrar</a></li>
-		     		<li><a href="../Logica/ScriptsPHP/consultaEmpresa.php">Reportar</a></li>
-		     		<li><a href="main.html">Volver</a></li>
-				</ul>
-      		</div>
-		</div>               
+        <div class="row">
+            <div class="col-md-2">
+                <ul class="nav nav-pills nav-stacked">
+                    <li><a href="formularioLinea.html">Registrar</a></li>
+                    <li><a href="../Logica/ScriptsPHP/consultaLinea.php">Reportar</a></li>
+                    <li><a href="main.html">Volver</a></li>
+                </ul>
+            </div>
+        </div>               
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
