--- a/html/formularioEmpresa.html
+++ b/html/formularioEmpresa.html
@@ -28,7 +28,7 @@
         
     </head>
     <body>
-    <script type="text/javascript" src="js/DataSender.js"></script>
+    <script type="text/javascript" src="js/DataSender/DataSender.js"></script>
     <div class="container">
       <!-- Logo Empresa -->
       <div class="row">
@@ -49,7 +49,7 @@
   		 <ul class="nav nav-tabs nav-justified">
     		 <li><a href="main.html">Inicio</a></li>
 		     <li class="active"><a href="formularioEmpresa.html">Empresa</a></li>
-		     <li><a href="EstadoArticulo.html">Estado Articulo</a></li>
+		     <li><a href="Dependencia.html">Dependencia</a></li>
 		     <li><a href="#">Salir</a></li>
 	  	 </ul>
 	   </div> 
