--- a/html/formularioLinea.html
+++ b/html/formularioLinea.html
@@ -48,7 +48,9 @@
      <div class="container" style="padding-top: 1em;">
   		 <ul class="nav nav-tabs nav-justified">
     		 <li><a href="main.html">Inicio</a></li>
+    		 <li><a href="Empresa.html">Empresa</a></li>
 		     <li class="active"><a href="formularioLinea.html">Linea</a></li>
+		     <li><a href="Dependencia.html">Dependencia</a></li>
 		     <li><a href="#">Salir</a></li>
 	  	 </ul>
 	   </div> 
