--- a/html/main.html
+++ b/html/main.html
@@ -45,6 +45,7 @@
     		 <li class="active"><a href="#">Inicio</a></li>
 		     <li><a href="Empresa.html">Empresa</a></li>
         	 <li><a href="Linea.html">Linea</a></li>
+        	 <li><a href="Dependencia.html">Dependencia</a></li>
 		     <li><a href="Usuario.html">Usuario</a></li>
 		     <li><a href="index.html">Salir</a></li> <!-- no elimina sessions, por favor revisar -->
 	  	 </ul>
@@ -52,7 +53,7 @@
     <p>
     <div class="container">
        <form class="form-horizontal" method="POST" action="../logica/ScriptsPHP/requestEmpresa.php">
-        Busequeda rapida de articulos
+        Busqueda rapida de articulos
         <p>
         <input type="text" class="form-control" placeholder="Nombre del articulo" disabled>
           
