--- a/html/Empresa.html
+++ b/html/Empresa.html
@@ -44,7 +44,8 @@
   		 <ul class="nav nav-tabs nav-justified">
     		 <li><a href="main.html">Inicio</a></li>
 		     <li class="active"><a href="Empresa.html">Empresa</a></li>
-         <li><a href="Linea.html">Linea</a></li>
+         	 <li><a href="Linea.html">Linea</a></li>
+         	 <li><a href="Dependencia.html">Dependencia</a></li>
 		     <li><a href="Usuario.html">Usuario</a></li>
 		     <li><a href="index.html">Salir</a></li> <!-- no elimina sessions, por favor revisar -->
 	  	 </ul>
