--- a/html/Linea.html
+++ b/html/Linea.html
@@ -42,6 +42,7 @@
              <li><a href="#">Inicio</a></li>
              <li><a href="Empresa.html">Empresa</a></li>
              <li class="active"><a href="Linea.html">Linea</a></li>
+             <li><a href="Dependencia.html">Dependencia</a></li>
              <li><a href="Usuario.html">Usuario</a></li>
              <li><a href="index.html">Salir</a></li> <!-- no elimina sessions, por favor revisar -->
          </ul>
