--- a/html/formularioDependencia.html
+++ b/html/formularioDependencia.html
@@ -28,7 +28,7 @@
         
     </head>
     <body>
-    <script type="text/javascript" src="js/DataSender.js"></script>
+    <script type="text/javascript" src="js/DataSender/DataSenderDependencia.js"></script>
     <div class="container">
       <!-- Logo Empresa -->
       <div class="row">
@@ -48,8 +48,8 @@
      <div class="container" style="padding-top: 1em;">
   		 <ul class="nav nav-tabs nav-justified">
     		 <li><a href="main.html">Inicio</a></li>		     
-		     <li><a href="Usuario.html">Usuario</a></li>
 		     <li><a href="Empresa.html">Empresa</a></li>
+		     <li><a href="Linea.html">Linea</a></li>
 		     <li class="active"><a href="formularioDependencia.html">Dependencia</a></li>
 		     <li><a href="index.html">Salir</a></li> <!-- no elimina sessions, por favor revisar -->
 	  	 </ul>
@@ -61,7 +61,7 @@
 			<div class="col-md-2">
 				<ul class="nav nav-pills nav-stacked">
 					<li><a href="formularioDependencia.html">Registrar</a></li>
-		     		<li><a href="../Logica/ScriptsPHP/consultarEmpresa.php">Reportar</a></li>
+		     		<li><a href="../Logica/ScriptsPHP/consultaDependencia.php">Reportar</a></li>
 		     		<li><a href="main.html">Volver</a></li>
 				</ul>
       		</div>
