--- a/html/formularioDependencia.html
+++ b/html/formularioDependencia.html
@@ -47,10 +47,11 @@
     <!-- menu superior -->
      <div class="container" style="padding-top: 1em;">
   		 <ul class="nav nav-tabs nav-justified">
-    		 <li><a href="main.html">Inicio</a></li>		     
+    		 <li><a href="main.html">Inicio</a></li>
 		     <li><a href="Empresa.html">Empresa</a></li>
-		     <li><a href="Linea.html">Linea</a></li>
-		     <li class="active"><a href="formularioDependencia.html">Dependencia</a></li>
+         	 <li class="active"><a href="Dependencia.html">Dependencia</a></li>
+         	 <li><a href="Linea.html">Linea</a></li>
+		     <li><a href="Usuario.html">Usuario</a></li>
 		     <li><a href="index.html">Salir</a></li> <!-- no elimina sessions, por favor revisar -->
 	  	 </ul>
 	   </div> 
@@ -96,11 +97,11 @@
 	          		<label class="control-label" for="Empresa">Empresa</label>
 	            		<div class="controls">
 			        		<select class="form-control" id = "empresa" class="input-xlarge">
-					  			<option>1</option>
-								<option>2</option>
-								<option>3</option>
-								<option>4</option>
-								<option>5</option>
+					  			<option>30</option>
+								<option>31</option>
+								<option>32</option>
+								<option>33</option>
+								<option>34</option>
 							</select>
 						</div>
 				</div>
