--- a/html/formularioLinea.html
+++ b/html/formularioLinea.html
@@ -28,7 +28,7 @@
         
     </head>
     <body>
-    <script type="text/javascript" src="js/DataSender.js"></script>
+    <script type="text/javascript" src="js/DataSender/DataSender.js"></script>
     <div class="container">
       <!-- Logo Empresa -->
       <div class="row">
@@ -48,10 +48,11 @@
      <div class="container" style="padding-top: 1em;">
   		 <ul class="nav nav-tabs nav-justified">
     		 <li><a href="main.html">Inicio</a></li>
-    		 <li><a href="Empresa.html">Empresa</a></li>
-		     <li class="active"><a href="formularioLinea.html">Linea</a></li>
-		     <li><a href="Dependencia.html">Dependencia</a></li>
-		     <li><a href="#">Salir</a></li>
+		     <li><a href="Empresa.html">Empresa</a></li>
+         	 <li><a href="Dependencia.html">Dependencia</a></li>
+         	 <li class="active"><a href="Linea.html">Linea</a></li>
+		     <li><a href="Usuario.html">Usuario</a></li>
+		     <li><a href="index.html">Salir</a></li> <!-- no elimina sessions, por favor revisar -->
 	  	 </ul>
 	   </div> 
     
