--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,7 @@
 		<div class = "row">			
 			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4"></div>
 			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 well">
+			<!-- poner un div visible = false -->
 				<form action="" name="f1" method="POST">
 					<div class="input-group">
 						<span class="input-group-addon"><l class="glyphicon glyphicon-user"> Usuario</span>
