--- a/html/Linea.html
+++ b/html/Linea.html
@@ -39,13 +39,13 @@
     <!-- menu superior -->
      <div class="container" style="padding-top: 1em;">
          <ul class="nav nav-tabs nav-justified">
-             <li><a href="#">Inicio</a></li>
-             <li><a href="Empresa.html">Empresa</a></li>
-             <li class="active"><a href="Linea.html">Linea</a></li>
-             <li><a href="Dependencia.html">Dependencia</a></li>
-             <li><a href="Usuario.html">Usuario</a></li>
-             <li><a href="index.html">Salir</a></li> <!-- no elimina sessions, por favor revisar -->
-         </ul>
+    		 <li><a href="main.html">Inicio</a></li>
+		     <li><a href="Empresa.html">Empresa</a></li>
+         	 <li><a href="Dependencia.html">Dependencia</a></li>
+         	 <li  class="active"><a href="Linea.html">Linea</a></li>
+		     <li><a href="Usuario.html">Usuario</a></li>
+		     <li><a href="index.html">Salir</a></li> <!-- no elimina sessions, por favor revisar -->
+	  	 </ul>
        </div> 
     <p>
     <div class="container">
