--- a/html/formularioDependencia.html
+++ b/html/formularioDependencia.html
@@ -49,8 +49,9 @@
   		 <ul class="nav nav-tabs nav-justified">
     		 <li><a href="main.html">Inicio</a></li>
 		     <li><a href="Empresa.html">Empresa</a></li>
+		     <li><a href="Linea.html">Linea</a></li>
          	 <li class="active"><a href="Dependencia.html">Dependencia</a></li>
-         	 <li><a href="Linea.html">Linea</a></li>
+         	 <li><a href="Seccion.html">Seccion</a></li>
 		     <li><a href="Usuario.html">Usuario</a></li>
 		     <li><a href="index.html">Salir</a></li> <!-- no elimina sessions, por favor revisar -->
 	  	 </ul>
@@ -68,7 +69,7 @@
       		</div>
 		  
         <div class="col-md-4">
-	      <form class="form-horizontal"> <!--action="../logica/ScriptsPHP/requestEmpresa.php">-->
+	      <form class="form-horizontal"> <!--action="../logica/ScriptsPHP/requestDependencia.php">-->
 	
 	        <fieldset>
 	
